2009-06-17  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* progmodes/ruby-mode.el (ruby-parse-partial)
	(ruby-font-lock-keywords): Support overloadable negative
	operators (Bug#3587).

2009-06-17  Tiago Saboga  <tiagosaboga@gmail.com>  (tiny change)

	* files.el (save-some-buffers-action-alist): Fix last
	change (Bug#3578).

2009-06-17  Glenn Morris  <rgm@gnu.org>

	* files.el (dir-locals-set-directory-class): Fix doc typo.

2009-06-17  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (list-character-sets): Change
	"FINAL-CHAR" to "FINAL-BYTE" to follow the official terminology.
	(list-character-sets-1): Add one line explanation about
	"supplementary charset".  Make the part "Supplementary Character
	Sets" clickable.

2009-06-16  Eduard Wiebe  <usenet@pusto.de>  (tiny change)

	* international/mule-conf.el: Add cp949-2-byte, cp949.

2009-06-16  Kenichi Handa  <handa@m17n.org>

	* composite.el (compose-region): Improve the docstring.

2009-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-default-revision-granularity): Remove to let the normal
	error handling kick in (bug#3570).

2009-06-13  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (kill-visual-line): Rewrite (Bug#3437).  Don't try to
	handle kill-whole-line, as it doesn't make sense in this context.

2009-06-12  Sam Steingold  <sds@gnu.org>

	* vc-hg.el (vc-hg-log-switches): Add defcustom.
	(vc-hg-print-log): Use it.

2009-06-12  Kenichi Handa  <handa@m17n.org>

	* international/eucjp-ms.el: Re-generated.

2009-06-10  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-dst.el (calendar-time-zone-daylight-rules):
	Fix typo in 2008-04-02 change.

2009-06-10  Kenichi Handa  <handa@m17n.org>

	* composite.el (compose-gstring-for-terminal): For zero-width
	characters of Unicode category `Cf', simply replace it with SPC.

2009-06-09  Agustín Martín <agustin.martin@hispalinux.es>

	* ispell.el: Make `ispell-dictionary' customizable (#2555)
