@@ -1,3 +1,9 @@
+2009-06-17  Chong Yidong  <cyd@stupidchicken.com>
+
+	* progmodes/compile.el (compilation-error-regexp-alist-alist):
+	Comment out 2007-07-25 change adding support for Maven error
+	messages; this regexp is too slow on long lines (Bug#3441).
+
 2009-06-17  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)
 
 	* progmodes/ruby-mode.el (ruby-parse-partial)
